coreclient/src/chats/snapshots/aircoreclient__chats__outgoing_requests__tests__targeted_request_serde_json.snap
---
source: coreclient/src/chats/outgoing_requests.rs
expression: "&*TARGETED_REQUEST"
---
{
  "Targeted": {
    "user_id": {
      "uuid": "00000000-0000-0000-0000-000000000001",
      "domain": {
        "domain": {
          "Domain": "localhost"
        }
      }
    },
    "friendship_package_ear_key": {
      "secret": [
        102,
        114,
        105,
        101,
        110,
        100,
        115,
        104,
        105,
        112,
        95,
        112,
        97,
        99,
        107,
        97,
        103,
        101,
        95,
        101,
        97,
        114,
        95,
        107,
        101,
        121,
        95,
        51,
        50,
        95,
        95,
        95
      ]
    },
    "origin_group_id": {
      "value": {
        "vec": [
          111,
          114,
          105,
          103,
          105,
          110,
          45,
          103,
          114,
          111,
          117,
          112
        ]
      }
    }
  }
}
