coreclient/src/chats/snapshots/aircoreclient__chats__outgoing_requests__tests__username_request_serde_json.snap
---
source: coreclient/src/chats/outgoing_requests.rs
expression: "&*USERNAME_REQUEST"
---
{
  "Username": {
    "username": "ellie-",
    "friendship_package_ear_key": {
      "secret": [
        102,
        114,
        105,
        101,
        110,
        100,
        115,
        104,
        105,
        112,
        95,
        112,
        97,
        99,
        107,
        97,
        103,
        101,
        95,
        101,
        97,
        114,
        95,
        107,
        101,
        121,
        95,
        51,
        50,
        95,
        95,
        95
      ]
    },
    "connection_offer_hash": [
      1,
      2,
      3,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0
    ]
  }
}
